<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:visibility="visible"
    android:weightSum="3" >

    <TextView
        android:id="@+id/statusTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/status"
        android:textColor="#000" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/organizationalTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/organizational_level"
        android:textColor="#000" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#ffffff" />

    <TextView
        android:id="@+id/resTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name_of_res"
        android:textColor="#000" />

</LinearLayout>