<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/W_m_H_m"
    android:background="@drawable/main_background" >

    <ViewStub
        android:id="@+id/vsHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inflatedId="@+id/vsHeader"
        android:layout="@layout/header_activity_group" />

    <LinearLayout
        android:id="@+id/topLinear"
        style="@style/W_m_H_w"
        android:layout_below="@id/vsHeader"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titleText"
            style="@style/titleStyle"
            android:gravity="center"
            android:text="This is Title" />

        <LinearLayout
            style="@style/W_m_H_w"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/labelStyle"
                android:text="@string/from_date" />

            <TextView
                android:id="@+id/startDateText"
                style="@style/W_w_H_w"
                android:layout_marginLeft="30dp"
                android:background="@drawable/field"
                android:paddingLeft="100dp"
                android:gravity="center"
                android:padding="5dp" />
        </LinearLayout>

        <LinearLayout
            style="@style/W_m_H_w"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/labelStyle"
                android:text="@string/to_date" />

            <TextView
                android:id="@+id/endDateText"
                style="@style/W_w_H_w"
                android:layout_marginLeft="49dp"
                android:background="@drawable/field"
                android:gravity="center"
                android:padding="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            style="@style/W_w_H_w"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_common"
            android:text="@string/show"
            android:textColor="#ffffff" />
    </LinearLayout>

  	<ViewFlipper
        android:id="@+id/mainFlipper"
        style="@style/W_m_H_w"
        android:layout_below="@id/topLinear"
        android:layout_marginTop="10dp"
        android:visibility="invisible" >

    

    </ViewFlipper>
  <RelativeLayout 
       android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainFlipper"
        android:layout_marginTop="20dp" >
       <TextView
            android:id="@+id/currentPage" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerVertical="true"/>
   
    <!--
    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainFlipper"
        android:visibility="gone"
        android:layout_marginTop="120dp" >

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="82dp"
            android:text="Next" />

        <Button
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="66dp"
            android:text="Prev" />
    </RelativeLayout>
    -->

    <TextView
        android:id="@+id/attachmentLink"
        style="@style/W_m_H_w"
        android:layout_alignParentLeft="true"
        android:layout_toRightOf="@+id/currentPage"
        android:layout_marginRight="10dp"
        android:layout_marginTop="4dp"
        android:gravity="right"
        android:text="@string/attachment"
        android:visibility="gone" />      
       
   </RelativeLayout>
  	
     <ScrollView
        style="@style/W_m_H_m"
        android:layout_below="@id/bottomLayout" >

        <LinearLayout
            style="@style/W_m_H_m"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/topHeadingTxt"
                style="@style/W_m_H_m"
                android:layout_marginTop="10dp"
                android:background="@color/TV_Blue"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3" >
                <!--android:background="#5B83B6"-->


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/status"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/organizational_level"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#ffffff" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/name_of_res"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainLinear"
                style="@style/W_m_H_m"
                android:orientation="vertical"
                android:visibility="gone" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>